@@ -388,3 +388,12 @@ Now we will use a product with different unit of measure::
     >>> move = Move(purchase.moves[0].id)
     >>> move.in_anglo_saxon_quantity
     1.0
+
+    >>> move.click('cancel')
+    Traceback (most recent call last):
+        ...
+    AccessError: ...
+    >>> move.delete()
+    Traceback (most recent call last):
+        ...
+    AccessError: ...
