@@ -1,3 +1,4 @@
+* Forbid to cancel stock move used for anglo-saxon accounting
 
 Version 7.2.0 - 2024-04-29
 --------------------------
